syntax = "proto3";
package organization.service.v1;
option go_package = "github.com/Wafer233/msproject-be/user-service/proto/organization";

message OrganizationDTO {
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  string description = 4;
  int64 member_id = 5;
  int64 create_time = 6;
  int32 personal = 7;
  string address = 8;
  int32 province = 9;
  int32 city = 10;
  int32 area = 11;
  string code = 12; // 加密后的ID
}

message OrgListRequest {
  int64 member_id = 1;
}

message OrgListResponse {
  repeated OrganizationDTO organization_list = 1;
}

service OrganizationService {
  // 获取组织列表
  rpc GetOrgList(OrgListRequest) returns (OrgListResponse) {}
}